--- a/index.html
+++ b/index.html
@@ -1,9 +1,98 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Hemisphere 360 group</title>
-</head>
-<body>
+	<!-- Style Sheets -->
+  	<link rel="stylesheet" href="css/materialize.min.css">
+  	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="css/style.css" type="text/css" rel="stylesheet" />
 
+</head>
+
+<body>
+	<div class="parallax-container">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<h1 class="header center"><img class="responsive-img " id="logo" src="images/hemilogo.png"></h1>
+				<div class="row center white-text">
+					<h4>Hemishpere 360 Group, LLC</h4>
+					<h4>1861 Bramlett Road, Greensboro Georgia 30642</h4>
+				</div>
+			</div>	
+		</div>
+		<div class="parallax"><img src="images/cover.JPG" alt="Hemi Blueberry Farm"></div>	
+	</div>
+	<div class="section indigo darken-3 white-text">
+		<div class=" row ">
+			<div class=" col s12 m4">
+				<div class="container">
+					</br>
+					<h5>Blueberries</h5>
+					<h6><i class="tiny material-icons">grade</i>  Vernon</h6>
+					<h6><i class="tiny material-icons">grade</i>  Titan</h6>
+					<h6><i class="tiny material-icons">grade</i>  Krewer</h6>
+					<h6><i class="tiny material-icons">grade</i>  Camelia</h6>
+					</br>
+				</div>
+			</div>
+			<div class="col s12 m4">
+			<img src="images/blueberrybuds.jpg" class="ilimage responsive-img">
+			</div>
+			<div class=" col s12 m4">
+				<div class="container">
+					</br>	
+					<h5 >Muscadines</h5>
+					<h6><i class="tiny material-icons">grade</i>  Black Jumbo</h6>
+					<h6><i class="tiny material-icons">grade</i>  Black Butte</h6>
+					<h6><i class="tiny material-icons">grade</i>  Bronze Magnolia Scuppernong</h6>
+					<h6><i class="tiny material-icons">grade</i>  Bronze Old Fashioned Scuppernong</h6>
+					</br>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 white-text light"> Hector Buitrago  </h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="images/Hector.jpg" alt="Hector Buitrago"></div>
+  </div>
+  <div class="section indigo darken-3 white-text">
+		<div class=" row ">
+			<div class=" col s12 m6">
+				<div class="container">
+					</br>
+					<h5>Future Blueberry Products</h5>
+					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Preserves</h6>
+					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Muffins</h6>
+					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Bread</h6>
+					<h6><i class="tiny material-icons">grade</i>  Hemi Blueberry Pastries</h6>
+					</br>
+				</div>
+			</div>
+			<div class="col s12 m6 ">
+			<img src="images/barnvert.jpg" class="ilimage responsive-img">
+			</div>
+		</div>
+	</div>
+	<div class="parallax-container valign-wrapper">
+	    <div class="section no-pad-bot">
+	      <div class="container">
+	        <div class="row center">
+	          <h5 class="header col s12 white-text light"> Stay tuned for more updates! </h5>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="images/Tractor.jpg" alt="Planting at the farm"></div>
+  	</div>
+
+	<!-- scripts -->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="js/materialize.min.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
