tractor image misspelling

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	        </div>
 	      </div>
 	    </div>
-	    <div class="parallax"><img src="images/Tractor.jpg" alt="Planting at the farm"></div>
+	    <div class="parallax"><img src="images/tractor.jpg" alt="Planting at the farm"></div>
   	</div>
 
 	<!-- scripts -->
