--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hemisphere 360 group</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  	<title>Hemisphere 360 group</title>
 	<!-- Style Sheets -->
   	<link rel="stylesheet" href="css/materialize.min.css">
   	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,8 +16,8 @@
 			<div class="container">
 				<h1 class="header center"><img class="responsive-img " id="logo" src="images/hemilogo.png"></h1>
 				<div class="row center white-text">
-					<h4>Hemishpere 360 Group, LLC</h4>
-					<h4>1861 Bramlett Road, Greensboro Georgia 30642</h4>
+					<h4 class="header col s12 light tagline">Hemishpere 360 Group, LLC</br>1861 Bramlett Road, Greensboro Georgia 30642</h4>
+					<br>
 				</div>
 			</div>	
 		</div>
