changed bk color to white

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 				</div>
 			</div>	
 		</div>
-		<div class="parallax"><img src="images/cover.JPG" alt="Hemi Blueberry Farm"></div>	
+		<div class="parallax"><img src="images/buds.jpeg" alt="Hemi Blueberry Farm"></div>	
 	</div>
-	<div class="section indigo darken-3 white-text">
+	<div class="section white indigo-text">
 		<div class=" row ">
 			<div class=" col s12 m4">
 				<div class="container">
@@ -62,7 +62,7 @@
     </div>
     <div class="parallax"><img src="images/Hector.jpg" alt="Hector Buitrago"></div>
   </div>
-  <div class="section indigo darken-3 white-text">
+  <div class="section indigo-text">
 		<div class=" row ">
 			<div class=" col s12 m6">
 				<div class="container">
