--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   	<link rel="stylesheet" href="css/materialize.min.css">
   	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="images/hemilogo.png">
+  <link rel="shortcut icon" type="image/x-icon" href="images/hemilogo.png">
 </head>
 
 <body>
@@ -81,7 +83,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 white-text light"> Hector Buitrago  </h5>
+          <h5 class="header col s12 white-text light"></h5>
         </div>
       </div>
     </div>
@@ -114,11 +116,6 @@
 	      </div>
 	    </div>
 	    <div class="parallax"><img src="images/tractor.jpg" alt="Planting at the farm"></div>
-  	</div>
-  	<div class="section">
-  		<div class="row">
-  					
-  		</div>
   	</div>
 
 	<!-- scripts -->
