paragraph and copy

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col l8 push-l2 s12">
+				<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop will be ready in May 2017 and will include Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows four (4) varieties of Blueberries: Vernon, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
+			</div>
+			
+		</div>
 	</div>
 	<div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
