--- a/index.html
+++ b/index.html
@@ -39,30 +39,32 @@
 				</div>
 			</div>
 			<div class="col s12 m6">
-				<div class="slider">
-				    <ul class="slides">
-				      <li>
-				        <img src="images/blue1.jpeg"> 
-				      </li>
-				      <li>
-				        <img src="images/blue2.jpeg"> 
-				      </li>
-				      <li>
-				        <img src="images/blue3.jpeg"> 
-				      </li>
-				      <li>
-				        <img src="images/blue4.jpeg"> 
-				      </li>
-				      <li>
-				        <img src="images/blue5.jpeg"> 
-				      </li>
-				      <li>
-				        <img src="images/blue6.jpeg"> 
-				      </li>
-				      <li>
-				        <img src="images/blue8.jpeg"> 
-				      </li>
-				    </ul>
+				<div class="container">
+					<div class="slider">
+					    <ul class="slides">
+					      <li>
+					        <img src="images/blue1.jpeg"> 
+					      </li>
+					      <li>
+					        <img src="images/blue2.jpeg"> 
+					      </li>
+					      <li>
+					        <img src="images/blue3.jpeg"> 
+					      </li>
+					      <li>
+					        <img src="images/blue4.jpeg"> 
+					      </li>
+					      <li>
+					        <img src="images/blue5.jpeg"> 
+					      </li>
+					      <li>
+					        <img src="images/blue6.jpeg"> 
+					      </li>
+					      <li>
+					        <img src="images/blue8.jpeg"> 
+					      </li>
+					    </ul>
+					</div>
 	  			</div>	
 			</div>
 			<div class=" col s12 m3">
@@ -79,9 +81,10 @@
 		</div>
 		<div class="row">
 			<div class="col l8 push-l2 s12">
-				<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop will be ready in May 2017 and will include Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows four (4) varieties of Blueberries: Vernon, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
+				<div class="container">
+					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop will be ready in May 2017 and will include Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows four (4) varieties of Blueberries: Vernon, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
+				</div>
 			</div>
-			
 		</div>
 	</div>
 	<div class="parallax-container valign-wrapper">
@@ -108,7 +111,9 @@
 				</div>
 			</div>
 			<div class="col s12 m6 ">
-				<img src="images/barnvert.jpg" class="ilimage responsive-img">
+				<div class="container">
+					<img src="images/barnvert.jpg" class="ilimage responsive-img">
+				</div>
 			</div>
 		</div>
 	</div>
