--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="section white indigo-text">
 		<div class=" row ">
-			<div class=" col s12 m3">
+			<div class="col s12 m3 l2">
 				<div class="container">
 					</br>
 					<h5>Blueberries</h5>
@@ -38,36 +38,34 @@
 					</br>
 				</div>
 			</div>
-			<div class="col s12 m6">
-				<div class="container">
-					<div class="slider">
-					    <ul class="slides">
-					      <li>
-					        <img src="images/blue1.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue2.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue3.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue4.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue5.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue6.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue8.jpeg"> 
-					      </li>
-					    </ul>
-					</div>
-	  			</div>	
+			<div class="col s12 m6 l8">
+				<div class="slider">
+				    <ul class="slides">
+				      <li>
+				        <img src="images/blue1.jpeg"> 
+				      </li>
+				      <li>
+				        <img src="images/blue2.jpeg"> 
+				      </li>
+				      <li>
+				        <img src="images/blue3.jpeg"> 
+				      </li>
+				      <li>
+				        <img src="images/blue4.jpeg"> 
+				      </li>
+				      <li>
+				        <img src="images/blue5.jpeg"> 
+				      </li>
+				      <li>
+				        <img src="images/blue6.jpeg"> 
+				      </li>
+				      <li>
+				        <img src="images/blue8.jpeg"> 
+				      </li>
+				    </ul>
+				</div>
 			</div>
-			<div class=" col s12 m3">
+			<div class="col s12 m3 l2">
 				<div class="container">
 					</br>	
 					<h5 >Muscadines</h5>
@@ -78,7 +76,7 @@
 					</br>
 				</div>
 			</div>
-		</div>
+		</div>	
 		<div class="row">
 			<div class="col l8 push-l2 s12">
 				<div class="container">
