--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 			<div class="col l8 push-l2 s12">
 				<div class="container">
 					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop will be ready in May 2017 and will include Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows four (4) varieties of Blueberries: Vernon, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
+					<p>PICK YOUR OWN blackberries, blueberries, muscadine grapes, pick yourself and already picked, restrooms Open: Tuesday to Sunday, from 10 am to 5 pm.  Blueberries and Blackberries June 15 to July 15 Muscadines from July 15 to August 15. Payment: Cash, only. 
+					</p>
 				</div>
 			</div>
 		</div>
@@ -97,7 +99,7 @@
   </div>
   <div class="section indigo-text">
 		<div class=" row ">
-			<div class=" col s12 m6">
+			<div class=" col s12 l4">
 				<div class="container">
 					</br>
 					<h5>Future Blueberry Products</h5>
@@ -108,7 +110,16 @@
 					</br>
 				</div>
 			</div>
-			<div class="col s12 m6 ">
+			<div class=" col s12 l4">
+				<div class="container">
+					</br>
+					<h5>Links</h5>
+					<h6><i class="tiny material-icons">grade</i><a href="https://www.georgiagrown.com/members/profile/hemi-blueberry-farm">Find us on Georgia Grown</a></h6>
+
+					</br>
+				</div>
+			</div>
+			<div class="col s12 l4 ">
 				<div class="container">
 					<img src="images/barnvert.jpg" class="ilimage responsive-img">
 				</div>
