--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 		<div class="parallax"><img src="images/buds.jpeg" alt="Hemi Blueberry Farm"></div>	
 	</div>
 	<div class="section white indigo-text">
+		<div class="container">
+			
 		<div class=" row ">
 			<div class="col s12 m3 l2">
 				<div class="container">
@@ -77,6 +79,7 @@
 				</div>
 			</div>
 		</div>	
+		</div>
 		<div class="row">
 			<div class="col l8 push-l2 s12">
 				<div class="container">
@@ -98,6 +101,8 @@
     <div class="parallax"><img src="images/Hector.jpg" alt="Hector Buitrago"></div>
   </div>
   <div class="section indigo-text">
+  	<div class="container">
+  		
 		<div class=" row ">
 			<div class=" col s12 l4">
 				<div class="container">
@@ -126,6 +131,7 @@
 			</div>
 		</div>
 	</div>
+  	</div>
 	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
