--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
 	    </div>
 	    <div class="parallax"><img src="images/tractor.jpg" alt="Planting at the farm"></div>
   	</div>
+  		<div class="parallax-container valign-wrapper">
+	    <div class="section no-pad-bot">
+	      <div class="container">
+	        <div class="row center">
+	          <h5 class="header col s12 white-text light"></h5>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="images/Hemi - 1 of 25.png" alt="Planting at the farm"></div>
+  	</div>
 
 	<!-- scripts -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
