--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	    </div>
 	    <div class="parallax"><img src="images/tractor.jpg" alt="Planting at the farm"></div>
   	</div>
-  		<div class="parallax-container valign-wrapper">
+  	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
 	        <div class="row center">
@@ -147,6 +147,16 @@
 	      </div>
 	    </div>
 	    <div class="parallax"><img src="images/Hemi - 1 of 25.png" alt="Planting at the farm"></div>
+  	</div>
+  	<div class="parallax-container valign-wrapper">
+	    <div class="section no-pad-bot">
+	      <div class="container">
+	        <div class="row center">
+	          <h5 class="header col s12 white-text light"></h5>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="images/Hemi - 2 of 25.png" alt="Planting at the farm"></div>
   	</div>
 
 	<!-- scripts -->
