--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 	    </div>
 	    <div class="parallax"><img src="images/tractor.jpg" alt="Planting at the farm"></div>
   	</div>
+  	<div class="section indigo-text"></div>
   	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
@@ -148,6 +149,7 @@
 	    </div>
 	    <div class="parallax"><img src="images/Hemi - 1 of 25.png" alt="Planting at the farm"></div>
   	</div>
+  	<div class="section indigo-text"></div>
   	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
@@ -157,6 +159,17 @@
 	      </div>
 	    </div>
 	    <div class="parallax"><img src="images/Hemi - 2 of 25.png" alt="Planting at the farm"></div>
+  	</div>
+  	<div class="section indigo-text"></div>
+  	  	<div class="parallax-container valign-wrapper">
+	    <div class="section no-pad-bot">
+	      <div class="container">
+	        <div class="row center">
+	          <h5 class="header col s12 white-text light"></h5>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="images/Hemi - 3 of 25.png" alt="Planting at the farm"></div>
   	</div>
 
 	<!-- scripts -->
