--- a/index.html
+++ b/index.html
@@ -138,7 +138,30 @@
 	    </div>
 	    <div class="parallax"><img src="images/tractor.jpg" alt="Planting at the farm"></div>
   	</div>
-  	<div class="section indigo-text"></div>
+  	<div class="section indigo-text">
+  		<div class="row">
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 4 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 5 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 6 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+			<div class="col s12 l3">
+				<div class="container">
+					<img src="images/Hemi - 7 of 25.png" class="ilimage responsive-img">
+				</div>
+			</div>
+  		</div>
+  	</div>
   	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
@@ -149,7 +172,30 @@
 	    </div>
 	    <div class="parallax"><img src="images/Hemi - 1 of 25.png" alt="Planting at the farm"></div>
   	</div>
-  	<div class="section indigo-text"></div>
+  	<div class="section indigo-text">
+  		<div class="row">
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 8 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 9 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 10 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 11 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  		</div>
+  	</div>
   	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
@@ -160,7 +206,31 @@
 	    </div>
 	    <div class="parallax"><img src="images/Hemi - 2 of 25.png" alt="Planting at the farm"></div>
   	</div>
-  	<div class="section indigo-text"></div>
+  	<div class="section indigo-text">
+  		<div class="row">
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 12 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 13 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 14 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 15 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+
+  		</div>
+  	</div>
   	  	<div class="parallax-container valign-wrapper">
 	    <div class="section no-pad-bot">
 	      <div class="container">
@@ -171,7 +241,76 @@
 	    </div>
 	    <div class="parallax"><img src="images/Hemi - 3 of 25.png" alt="Planting at the farm"></div>
   	</div>
+  	<div class="section indigo-text">
+  		<div class="row">
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 16 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 17 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 18 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 19 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
 
+  		</div>
+  	</div>
+  	<div class="parallax-container valign-wrapper">
+	    <div class="section no-pad-bot">
+	      <div class="container">
+	        <div class="row center">
+	          <h5 class="header col s12 white-text light"></h5>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="images/Hemi - 20 of 25.png" alt="Planting at the farm"></div>
+  	</div>
+  	<div class="section indigo-text">
+  		<div class="row">
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 21 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 22 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 23 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+  			<div class="col s12 l3">
+  				<div class="container">
+					<img src="images/Hemi - 24 of 25.png" class="ilimage responsive-img">
+				</div>
+  			</div>
+
+  		</div>
+  	</div>
+  	<div class="parallax-container valign-wrapper">
+	    <div class="section no-pad-bot">
+	      <div class="container">
+	        <div class="row center">
+	          <h5 class="header col s12 white-text light"></h5>
+	        </div>
+	      </div>
+	    </div>
+	    <div class="parallax"><img src="images/Hemi - 25 of 25.png" alt="Planting at the farm"></div>
+  	</div>
 	<!-- scripts -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/materialize.min.js"></script>
