--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 					<div class="slider">
 					    <ul class="slides">
 					      <li>
+					    	<img src="images/Hemi - 20 of 25.png">	
+					      </li>	
+					      <li>
 					        <img src="images/blue1.jpeg"> 
 					      </li>
 					      <li>
@@ -79,8 +82,9 @@
 		<div class="row">
 			<div class="col l8 push-l2 s12">
 				<div class="container">
-					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop will be ready in May 2017 and will include Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows four (4) varieties of Blueberries: Vernon, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
-					<p>PICK YOUR OWN blackberries, blueberries, muscadine grapes, pick yourself and already picked, restrooms Open: Tuesday to Sunday, from 10 am to 5 pm.  Blueberries and Blackberries June 15 to July 15 Muscadines from July 15 to August 15. Payment: Cash, only. 
+					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop was in spring 2017 and included Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows six (6) varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
+					<h5>Pick your own</h5>
+					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season. Restrooms are available. Blueberries and Blackberries June 15 to July 15 Muscadines from July 15 to August 15. Picking is possible Tuesday to Sunday, from 10 am to 5 pm but please call ahead. Picking is by appointment only.
 					</p>
 				</div>
 			</div>
@@ -103,11 +107,12 @@
 			<div class=" col s12 l4">
 				<div class="container">
 					</br>
-					<h5>Future Blueberry Products</h5>
+					<h5>Future Products</h5>
 					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Preserves</h6>
 					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Muffins</h6>
 					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Bread</h6>
 					<h6><i class="tiny material-icons">grade</i>  HEMI Blueberry Pastries</h6>
+					<h6><i class="tiny material-icons">grade</i>  HEMI Muscadine Wine</h6>
 					</br>
 				</div>
 			</div>
@@ -191,7 +196,7 @@
   			</div>
   			<div class="col s12 l3">
   				
-					<img src="images/Hemi - 20 of 25.png" class="ilimage responsive-img">
+					<img src="images/hemiwine.jpg" class="ilimage responsive-img">
 			
   			</div>
   		</div>
