image name issue

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<div class="slider">
 					    <ul class="slides">
 					      <li>
-					    	<img src="images/Hemi - 20 of 25.png">	
+					    	<img src="images/Hemi-20of25.png">	
 					      </li>	
 					      <li>
 					        <img src="images/blue1.jpeg"> 
