adding blueberry names

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 					<h6><i class="tiny material-icons">grade</i>  Titan</h6>
 					<h6><i class="tiny material-icons">grade</i>  Krewer</h6>
 					<h6><i class="tiny material-icons">grade</i>  Camelia</h6>
+					<h6><i class="tiny material-icons">grade</i>  Legacy</h6>
+					<h6><i class="tiny material-icons">grade</i>  Brightwell</h6>
 					</br>
 				</div>
 				<div class="col s12 m6 l8">
