--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  	<title>Hemisphere 360 group</title>
+  	<title>HEMI Blueberry Farm</title>
 	<!-- Style Sheets -->
   	<link rel="stylesheet" href="css/materialize.min.css">
   	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -85,6 +85,7 @@
 			<div class="col l8 push-l2 s12">
 				<div class="container">
 					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop was in spring 2017 and included Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows six (6) varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
+					<p>HEMI Bluebery Farm is a registered trademark in the United States of America.</p>
 					<h5>Pick your own</h5>
 					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season. Restrooms are available. Blueberries and Blackberries June 15 to July 15 Muscadines from July 15 to August 15. Picking is possible Tuesday to Sunday, from 10 am to 5 pm but please call ahead. Picking is by appointment only.
 					</p>
