--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 					<h5>Pick your own</h5>
 					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season. Restrooms are available. Blueberries and Blackberries June 15 to July 15 Muscadines from July 15 to August 15. Picking is possible Tuesday to Sunday, from 10 am to 5 pm but please call ahead. Picking is by appointment only.
 					</p>
-					<p>Check out a recent essay and portrait about Hmei Blueberry farm <a href="https://chamberlainlockett.com/portfolio/hector-buitrago-hemi-blueberry-farm/">here</a></p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<p>Check out a recent essay and portrait about Hemi Blueberry farm <a href="https://chamberlainlockett.com/portfolio/hector-buitrago-hemi-blueberry-farm/">here</a></p>
+					<div class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 				</div>
 			</div>
 		</div>
