--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="slider">
 					    <ul class="slides">
 					      <li>
-					    	<img src="images/Hemi-20of25.png">	
+					    	<img src="images/pickyourown.png">	
 					      </li>	
 					      <li>
 					        <img src="images/blue1.jpeg"> 
