--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 	</div>
 	<div class="section white indigo-text">
 		<div class="container">
+			<div class="row">
+			  	<div class="col s12 l6 m6 push-m3 push-l6">
+					<img src="images/pickyourown.png" class="ilimage responsive-img">
+				</div>
+  			</div>
 			<div class=" row ">
 				<div class="col s12 m3 l2">
 					</br>
@@ -41,10 +46,7 @@
 				</div>
 				<div class="col s12 m6 l8">
 					<div class="slider">
-					    <ul class="slides">
-					      <li>
-					    	<img src="images/pickyourown.png">	
-					      </li>	
+					    <ul class="slides">	
 					      <li>
 					        <img src="images/blue1.jpeg"> 
 					      </li>
