--- a/index.html
+++ b/index.html
@@ -34,15 +34,6 @@
   			</div>
 			<div class=" row ">
 				<div class="col s12 m3 l2">
-					</br>
-					<h5>Blueberries</h5>
-					<h6><i class="tiny material-icons">grade</i>  Vernon</h6>
-					<h6><i class="tiny material-icons">grade</i>  Titan</h6>
-					<h6><i class="tiny material-icons">grade</i>  Krewer</h6>
-					<h6><i class="tiny material-icons">grade</i>  Camelia</h6>
-					<h6><i class="tiny material-icons">grade</i>  Legacy</h6>
-					<h6><i class="tiny material-icons">grade</i>  Brightwell</h6>
-					</br>
 				</div>
 				<div class="col s12 m6 l8">
 					<div class="slider">
@@ -72,26 +63,29 @@
 					</div>
 				</div>
 				<div class="col s12 m3 l2">
-				
-					</br>	
-					<h5 >Muscadines</h5>
-					<h6><i class="tiny material-icons">grade</i>  Black Jumbo</h6>
-					<h6><i class="tiny material-icons">grade</i>  Black Butte</h6>
-					<h6><i class="tiny material-icons">grade</i>  Bronze Magnolia Scuppernong</h6>
-					<h6><i class="tiny material-icons">grade</i>  Bronze Old Fashioned Scuppernong</h6>
-					</br>
 				</div>	
 			</div>	
 		</div>
 		<div class="row">
 			<div class="col l8 push-l2 s12">
 				<div class="container">
-					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2016 in Greensboro Georgia. Our first crop was in spring 2017 and included Blueberries, Blackberries and Muscadines. HEMI Blueberry Farm grows six (6) varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four (4) types of Muscadines: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong, and Bronze Old Fashioned. The University of Georgia received royalties for the Titan and Krewer blueberries farmed and cropped at HEMI Blueberry Farm. </p>
-					<p>HEMI Bluebery Farm is a registered trademark in the United States of America.</p>
-					<h5>Pick your own</h5>
-					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season. Restrooms are available. Blueberries and Blackberries June 1 to July 15 Muscadines from July 15 to August 15. Picking is possible Thursday to Sunday, from 10 am to 5 pm but please call ahead. Picking is by appointment only.
-					</p>
-					<p>Check out a recent essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></p>
+					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.  HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
+					<p>Owners: Hector Buitrago and Michele Lamassonne</p>
+					<p>We produce the freshest and most delicious blueberries and we don’t use pesticides.  We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
+					<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
+					<h5>COME AND PICK YOUR OWN!</h5>
+					<p>Pick your own starts in Late May of every year.</p>
+					<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
+					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
+					<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
+					<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
+					<ul>
+						<li>Restrooms are available.</li>
+						<li>Refreshments can be purchased.</li>
+						<li>Children must be supervised at all times.</li>
+						<li>Bring containers or bags to take your fruit</li>
+					</ul>
+					<p>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></p>
 					<div class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 				</div>
 			</div>
@@ -114,8 +108,16 @@
 			<div class=" col s12 l4">
 				<div class="container">
 					</br>
-					<h5>Future Products</h5>
-					<h6><i class="tiny material-icons">grade</i>  HEMI Homemade Blueberry Preserves</h6>
+					<h5>Products we sell</h5>
+					<h6><i class="tiny material-icons">grade</i>  Fresh Blueberries (end of May thru July)</h6>
+					<h6><i class="tiny material-icons">grade</i>  Fresh Muscadine Grapes (Aug-Sept)</h6>
+					<h6><i class="tiny material-icons">grade</i>  Fresh Blackberries (May - Aug)</h6>
+					<h6><i class="tiny material-icons">grade</i>  Frozen Blueberries</h6>
+					<h6><i class="tiny material-icons">grade</i>  Blueberry Preserves</h6>
+					<h6><i class="tiny material-icons">grade</i>  Blueberry Syrup</h6>
+					<h6><i class="tiny material-icons">grade</i>  Local Honey</h6>
+					<h6><i class="tiny material-icons">grade</i>  Blueberry Muffins</h6>
+					<h6><i class="tiny material-icons">grade</i>  Blueberry Lemonade</h6>
 					</br>
 				</div>
 			</div>
