--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 				</div>
   			</div>
 			<div class=" row ">
-				<div class="col s12 m3 l2">
-				</div>
-				<div class="col s12 m6 l8">
+				<div class="col s12 m6 l8 push-l2 push-m3">
 					<div class="slider">
 					    <ul class="slides">	
 					      <li>
@@ -62,8 +60,7 @@
 					    </ul>
 					</div>
 				</div>
-				<div class="col s12 m3 l2">
-				</div>	
+
 			</div>	
 		</div>
 		<div class="row">
