--- a/index.html
+++ b/index.html
@@ -25,13 +25,8 @@
 		</div>
 		<div class="parallax"><img src="images/buds.jpeg" alt="Hemi Blueberry Farm"></div>	
 	</div>
-	<div class="section white indigo-text">
+	<div class="section white indigo-text text-darken-4">
 		<div class="container">
-			<div class="row">
-			  	<div class="col s12 l6 m6 push-m3 push-l3">
-					<img src="images/pickyourown.png" class="ilimage responsive-img">
-				</div>
-  			</div>
 			<div class=" row ">
 				<div class="col s12 m6 l8 push-l2 push-m3">
 					<div class="slider">
@@ -64,13 +59,13 @@
 			</div>	
 		</div>
 		<div class="row">
-			<div class="col l8 push-l2 s12">
+			<div class="col l10 push-l1 s12">
 				<div class="container">
-					<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.  HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
+					<p class="text-darken-1">Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.  HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
 					<p>Owners: Hector Buitrago and Michele Lamassonne</p>
 					<p>We produce the freshest and most delicious blueberries and we don’t use pesticides.  We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
 					<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
-					<h5>COME AND PICK YOUR OWN!</h5>
+					<h5 class="text-darken-1">COME AND PICK YOUR OWN!</h5>
 					<p>Pick your own starts in Late May of every year.</p>
 					<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
 					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
