--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
 </head>
 
 <body>
-	<div class="parallax-container">
-		<div class="section no-pad-bot">
-			<div class="container">
-				<h1 class="header center"><img class="responsive-img " id="logo" src="images/hemilogo.png"></h1>
-				<div class="row center white-text">
-					<h2 class="header col s12 light tagline">HEMI Blueberry Farm</br>1861 Bramlett Road, Greensboro Georgia 30642</br>770-403-7018</h2>
-					<br>
-				</div>
-			</div>	
-		</div>
-		<div class="parallax"><img src="images/buds.jpeg" alt="Hemi Blueberry Farm"></div>	
-	</div>
+	<header>
+		<section>
+			<div>
+				<img src="/images/hemilogo.png"/>
+				<h3 class="tagline">HEMI Blueberry Farm<br>
+					1861 Bramlett Road, Greensboro Georgia 30642<br>
+				770-403-7018</h3>
+			</div>
+		</section>
+		<section>
+			<div>
+				<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017. HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
+
+				<p>Owners: Hector Buitrago and Michele Lamassonne</p>
+				<p>We produce the freshest and most delicious blueberries and we don’t use pesticides. We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
+				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
+			</div>
+		</section>
+	</header>
 	<div class="section white indigo-text text-darken-4">
 		<div class="container">
 			<div class=" row ">
@@ -61,11 +68,11 @@
 		<div class="row">
 			<div class="col l10 push-l1 s12">
 				<div class="container">
-					<p class="text-darken-1">Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.  HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
+					<p class="indigo-text text-darken-1">Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.  HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
 					<p>Owners: Hector Buitrago and Michele Lamassonne</p>
 					<p>We produce the freshest and most delicious blueberries and we don’t use pesticides.  We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
 					<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
-					<h5 class="text-darken-1">COME AND PICK YOUR OWN!</h5>
+					<h5 class="indigo-text text-darken-1">COME AND PICK YOUR OWN!</h5>
 					<p>Pick your own starts in Late May of every year.</p>
 					<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
 					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
