--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
 	<header>
 		<section>
 			<div>
-				<img src="/images/hemilogo.png"/>
-				<h3 class="tagline">HEMI Blueberry Farm<br>
-					1861 Bramlett Road, Greensboro Georgia 30642<br>
-				770-403-7018</h3>
-			</div>
-		</section>
+				<img src="http://hemiblue.com/images/hemilogo.png" alt ="Hemi blueberry farm, greensboro georgia"/>
+				<h3>1861 Bramlett Road, <br> Greensboro Georgia 30642<br>770-403-7018</h3>
+    		</div>
+    	</section>
 		<section>
 			<div>
-				<p>Welcome to HEMI Blueberry Farm! We're a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017. HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
-
-				<p>Owners: Hector Buitrago and Michele Lamassonne</p>
+				<h2>Welcome!</h2>
+				<p> Hemi Blueberry Farm is a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017. HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
+    			<p>Owners: Hector Buitrago and Michele Lamassonne</p>
 				<p>We produce the freshest and most delicious blueberries and we don’t use pesticides. We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
 				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
 			</div>
