this will break things

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   	<title>HEMI Blueberry Farm</title>
 	<!-- Style Sheets -->
-  	<link rel="stylesheet" href="css/materialize.min.css">
-  	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  	 <link href="css/splide.min.css" type="text/css" rel="stylesheet" />
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
-	<link rel="icon" type="image/png" href="images/hemilogo.png">
-  <link rel="shortcut icon" type="image/x-icon" href="images/hemilogo.png">
+	<link rel="icon" type="image/png" href="images/blueberry.png">
+  <link rel="shortcut icon" type="image/x-icon" href="images/blueberry.png">
 </head>
 
 <body>
 	<header>
 		<section>
 			<div>
-				<img src="http://hemiblue.com/images/hemilogo.png" alt ="Hemi blueberry farm, greensboro georgia"/>
+				<img src="/images/hemilogo.png" alt ="Hemi blueberry farm, greensboro georgia"/>
 				<h3>1861 Bramlett Road, <br> Greensboro Georgia 30642<br>770-403-7018</h3>
     		</div>
     	</section>
@@ -30,39 +29,90 @@
 			</div>
 		</section>
 	</header>
+
+	<main>
+	  	<section class="pick-your-own">
+	    	<article>
+	      		<h2>Come by the farm and pick your own!</h2>
+				<p>Pick your own starts in Late May of every year.</p>
+				<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
+				<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
+				<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
+				<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
+				<ul>
+					<li>Restrooms are available.</li>
+					<li>Refreshments can be purchased.</li>
+					<li>Children must be supervised at all times.</li>
+					<li>Bring containers or bags to take your fruit</li>
+				</ul>
+	    </article>
+	    <div class="products">
+	    	<!-- to do = add products with a background image  -->
+	    </div>
+	 	</section>
+	  	<section class="media">
+	  		<div id="primary-slider" class="splide">
+	     	 	<div class="splide__track">
+	        		<ul class="splide__list">
+	          			<li class="splide__slide">
+	            			<img data-splide-lazy="/images/hemi_25.jpg" src="/images/hemi_25.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	              			<img data-splide-lazy="/images/hemi_16.jpg" src="/images/hemi_16.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_02.jpg" src="/images/hemi_02.jpg"/>
+	           			</li>
+	           			<li class="splide__slide">
+	            			<img data-splide-lazy="/images/hemi_12.jpg" src="/images/hemi_12.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	              			<img data-splide-lazy="/images/hemi_22.jpg" src="/images/hemi_22.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_07.jpg" src="/images/hemi_07.jpg"/>
+	           			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_08.jpg" src="/images/hemi_08.jpg"/>
+	           			</li>	        		
+	           		</ul>
+	     		</div>
+	    	</div>
+	    	<div id="secondary-slider" class="splide">
+	      		<div class="splide__track">
+	        		<ul class="splide__list">
+	          			<li class="splide__slide">
+	            			<img data-splide-lazy="/images/hemi_25.jpg" src="/images/hemi_25.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	              			<img data-splide-lazy="/images/hemi_16.jpg" src="/images/hemi_16.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_02.jpg" src="/images/hemi_02.jpg"/>
+	           			</li>
+	           			<li class="splide__slide">
+	            			<img data-splide-lazy="/images/hemi_12.jpg" src="/images/hemi_12.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	              			<img data-splide-lazy="/images/hemi_22.jpg" src="/images/hemi_22.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_07.jpg" src="/images/hemi_07.jpg"/>
+	           			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_08.jpg" src="/images/hemi_08.jpg"/>
+	           			</li>	        		
+	           		</ul>
+	      		</div>
+	    	</div>
+	  	</section>
+	</main>
+
+
+
+
 	<div class="section white indigo-text text-darken-4">
 		<div class="container">
-			<div class=" row ">
-				<div class="col s12 m6 l8 push-l2 push-m3">
-					<div class="slider">
-					    <ul class="slides">	
-					      <li>
-					        <img src="images/blue1.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue2.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue3.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue4.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue5.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue6.jpeg"> 
-					      </li>
-					      <li>
-					        <img src="images/blue8.jpeg"> 
-					      </li>
-					    </ul>
-					</div>
-				</div>
-
-			</div>	
-		</div>
 		<div class="row">
 			<div class="col l10 push-l1 s12">
 				<div class="container">
@@ -84,6 +134,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 	<div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
@@ -310,14 +361,8 @@
 	    <div class="parallax"><img src="images/Hemi - 25 of 25.png" alt="Planting at the farm"></div>
   	</div>
 	<!-- scripts -->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="js/materialize.min.js"></script>
-	<script src="js/scripts.js"></script>
-	<script type="text/javascript">
+	<script type="text/javascript" src="js/splide.min.js"></script>
+	<script type="text/javascript" src="js/scripts.js"></script>
 		
-	$(document).ready(function(){
-      $('.slider').slider();
-    });
-	</script>
 </body>
 </html>
