deleting problematic div

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	  	</section>
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
-    			<img src="images/Hector.jpg" alt="Hector Buitrago"></div>
+    			<img src="images/Hector.jpg" alt="Hector Buitrago">
 				<img src="images/barnvert.jpg">
 	    		<img src="images/tractor.jpg" alt="Planting at the farm">  				
 				<img src="images/Hemi - 4 of 25.png">				
