adding classes for a nicer grid

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	  	</section>
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
-    			<img src="images/Hector.jpg" alt="Hector Buitrago">
+    			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2">
 				<img src="images/barnvert.jpg">
 	    		<img src="images/tractor.jpg" alt="Planting at the farm">  				
 				<img src="images/Hemi - 4 of 25.png">				
@@ -131,8 +131,8 @@
 				<img src="images/Hemi - 7 of 25.png">
  				<img src="images/Hemi - 10 of 25.png" alt="Planting at the farm">
 				<img src="images/Hemi - 21 of 25.png">
-				<img src="images/Hemi - 9 of 25.png">
-				<img src="images/Hemi - 11 of 25.png">
+				<img src="images/Hemi - 9 of 25.png" class="row-2">
+				<img src="images/Hemi - 11 of 25.png" class="row-2">
     			<img src="images/Hemi - 2 of 25.png" alt="Planting at the farm">
 				<img src="images/Hemi - 12 of 25.png">
 				<img src="images/Hemi - 13 of 25.png">
@@ -144,10 +144,10 @@
 				<img src="images/Hemi - 18 of 25.png">
 				<img src="images/Hemi - 19 of 25.png">
     			<img src="images/Hemi - 1 of 25.png" alt="Planting at the farm">
-				<img src="images/Hemi - 14 of 25.png">
-				<img src="images/Hemi - 22 of 25.png">
-				<img src="images/Hemi - 23 of 25.png">
-				<img src="images/Hemi - 24 of 25.png">
+				<img src="images/Hemi - 14 of 25.png" class="row-2">
+				<img src="images/Hemi - 22 of 25.png" class="row-2">
+				<img src="images/Hemi - 23 of 25.png" class="row-2">
+				<img src="images/Hemi - 24 of 25.png" class="row-2">
 	    		<img src="images/Hemi - 25 of 25.png" alt="Planting at the farm">
 	  		</div>
 	  	</section>
