switching around sections and taking out brackets

--- a/index.html
+++ b/index.html
@@ -31,40 +31,7 @@
 	</header>
 
 	<main>
-	  	<section class="pick-your-own">
-	    	<article>
-	      		<h2>Come by the farm and pick your own!</h2>
-				<p>Pick your own starts in Late May of every year.</p>
-				<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
-				<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
-				<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
-				<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
-				<ul>
-					<li>Restrooms are available.</li>
-					<li>Refreshments can be purchased.</li>
-					<li>Children must be supervised at all times.</li>
-					<li>Bring containers or bags to take your fruit</li>
-				</ul>
-	    </article>
-	    <div class="products">
-	    	<!-- to do = add products with a background image  -->
-			<h5>Products we sell</h5>
-			<li>< Fresh Blueberries (end of May thru July)</li>
-			<li>< Fresh Muscadine Grapes (Aug-Sept)</li>
-			<li>< Fresh Blackberries (May - Aug)</li>
-			<li>< Frozen Blueberries</li>
-			<li>< Blueberry Preserves</li>
-			<li>< Blueberry Syrup</li>
-			<li>< Local Honey</li>
-			<li>< Blueberry Muffins</li>
-			<li>< Blueberry Lemonade</li>
-			<p>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></p>
-			<div class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-			<h5>Links</h5>
-					<h6><i class="tiny material-icons">grade</i><a href="https://www.georgiagrown.com/members/profile/hemi-blueberry-farm">Find us on Georgia Grown</a></h6>
-	    </div>
-	 	</section>
-	  	<section class="media">
+			  	<section class="media">
 	  		<div id="primary-slider" class="splide">
 	     	 	<div class="splide__track">
 	        		<ul class="splide__list">
@@ -120,6 +87,39 @@
 	      		</div>
 	    	</div>
 	  	</section>
+	  	<section class="pick-your-own">
+	    	<article>
+	      		<h2>Come by the farm and pick your own!</h2>
+				<p>Pick your own starts in Late May of every year.</p>
+				<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
+				<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
+				<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
+				<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
+				<ul>
+					<li>Restrooms are available.</li>
+					<li>Refreshments can be purchased.</li>
+					<li>Children must be supervised at all times.</li>
+					<li>Bring containers or bags to take your fruit</li>
+				</ul>
+	    </article>
+	    <div class="products">
+	    	<!-- to do = add products with a background image  -->
+			<h5>Products we sell</h5>
+			<li>Fresh Blueberries (end of May thru July)</li>
+			<li>Fresh Muscadine Grapes (Aug-Sept)</li>
+			<li>Fresh Blackberries (May - Aug)</li>
+			<li>Frozen Blueberries</li>
+			<li>Blueberry Preserves</li>
+			<li>Blueberry Syrup</li>
+			<li>Local Honey</li>
+			<li>Blueberry Muffins</li>
+			<li>Blueberry Lemonade</li>
+			<p>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></p>
+			<div class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+			<h5>Links</h5>
+					<h6><i class="tiny material-icons">grade</i><a href="https://www.georgiagrown.com/members/profile/hemi-blueberry-farm">Find us on Georgia Grown</a></h6>
+	    </div>
+	 	</section>
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
     			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2">
