adding link section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	    </article>
 	    <div class="products">
 	    	<!-- to do = add products with a background image  -->
-			<h5>Products we sell</h5>
+			<h2>Products we sell</h2>
 			<li>Fresh Blueberries (end of May thru July)</li>
 			<li>Fresh Muscadine Grapes (Aug-Sept)</li>
 			<li>Fresh Blackberries (May - Aug)</li>
@@ -116,10 +116,19 @@
 			<li>Blueberry Lemonade</li>
 			<p>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></p>
 			<div class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-			<h5>Links</h5>
-					<h6><i class="tiny material-icons">grade</i><a href="https://www.georgiagrown.com/members/profile/hemi-blueberry-farm">Find us on Georgia Grown</a></h6>
 	    </div>
 	 	</section>
+	 	<section class="links">
+			<h2>Links</h2>
+				<a href="https://www.georgiagrown.com/members/profile/hemi-blueberry-farm">Find us on Georgia Grown</a>
+				<h3>Farmers market we participate in:</h3>
+				<a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a>
+				<h3>Certifications and Memberships</h3>
+				<a href="https://www.cngfarming.org/https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a>
+				<a href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a>
+				<a href="https://georgiagrown.com/">Georgia Grown</a>
+				<a href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a>
+		</section>
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
     			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2">
