media section and links

--- a/index.html
+++ b/index.html
@@ -114,20 +114,26 @@
 			<li>Local Honey</li>
 			<li>Blueberry Muffins</li>
 			<li>Blueberry Lemonade</li>
-			<p>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></p>
-			<div class="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+			<h2>Farmers market we participate in:</h2>
+			<li><a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
+			<h2>Certifications and Memberships</h2>
+			<li><a href="https://www.cngfarming.org/https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a></li>
+			<li><a href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a></li>
+			<li><a href="https://georgiagrown.com/">Georgia Grown</a></li>
+			<li><a href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a></li>
 	    </div>
 	 	</section>
-	 	<section class="links">
-			<h2>Links</h2>
-				<a href="https://www.georgiagrown.com/members/profile/hemi-blueberry-farm">Find us on Georgia Grown</a>
-				<h3>Farmers market we participate in:</h3>
-				<a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a>
-				<h3>Certifications and Memberships</h3>
-				<a href="https://www.cngfarming.org/https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a>
-				<a href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a>
-				<a href="https://georgiagrown.com/">Georgia Grown</a>
-				<a href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a>
+	 	<section class="media">
+	 		<div>
+				<h2>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></h2>
+				<div class="center" style="padding:56.25% 0 0 0;position:relative;"><iframe  src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+	 		</div>
+	 		<div>
+	 			<h2>More about the farm</h2>
+				<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/420493846" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	 			
+	 		</div>
+
 		</section>
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
