less images - too heavy

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	 	<section class="media">
 	 		<div>
 				<h2>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></h2>
-				<div class="center" style="padding:56.25% 0 0 0;position:relative;"><iframe  src="https://www.youtube.com/embed/Q1EZuXHVrJY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+				<div class="center" style="padding:56.25% 0 0 0;position:relative;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Q1EZuXHVrJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	 		</div>
 	 		<div>
 	 			<h2>More about the farm</h2>
@@ -138,32 +138,9 @@
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
     			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2">
-				<img src="images/barnvert.jpg">
-	    		<img src="images/tractor.jpg" alt="Planting at the farm">  				
-				<img src="images/Hemi - 4 of 25.png">				
-				<img src="images/Hemi - 5 of 25.png">
-				<img src="images/Hemi - 6 of 25.png">
-				<img src="images/Hemi - 7 of 25.png">
- 				<img src="images/Hemi - 10 of 25.png" alt="Planting at the farm">
-				<img src="images/Hemi - 21 of 25.png">
-				<img src="images/Hemi - 9 of 25.png" class="row-2">
-				<img src="images/Hemi - 11 of 25.png" class="row-2">
-    			<img src="images/Hemi - 2 of 25.png" alt="Planting at the farm">
-				<img src="images/Hemi - 12 of 25.png">
 				<img src="images/Hemi - 13 of 25.png">
-				<img src="images/Hemi - 8 of 25.png">
-				<img src="images/Hemi - 15 of 25.png">
+	    		<img src="images/tractor.jpg" alt="Planting at the farm">  				
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
-				<img src="images/Hemi - 16 of 25.png">
-				<img src="images/Hemi - 17 of 25.png">
-				<img src="images/Hemi - 18 of 25.png">
-				<img src="images/Hemi - 19 of 25.png">
-    			<img src="images/Hemi - 1 of 25.png" alt="Planting at the farm">
-				<img src="images/Hemi - 14 of 25.png" class="row-2">
-				<img src="images/Hemi - 22 of 25.png" class="row-2">
-				<img src="images/Hemi - 23 of 25.png" class="row-2">
-				<img src="images/Hemi - 24 of 25.png" class="row-2">
-	    		<img src="images/Hemi - 25 of 25.png" alt="Planting at the farm">
 	  		</div>
 	  	</section>
 	</main>	
