--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</header>
 
 	<main>
-			  	<section class="media">
+		<section >
 	  		<div id="primary-slider" class="splide">
 	     	 	<div class="splide__track">
 	        		<ul class="splide__list">
@@ -126,7 +126,7 @@
 	 	<section class="media">
 	 		<div>
 				<h2>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></h2>
-				<div class="center" style="padding:56.25% 0 0 0;position:relative;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Q1EZuXHVrJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div style="padding:56.25% 0 0 0;position:relative;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Q1EZuXHVrJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	 		</div>
 	 		<div>
 	 			<h2>More about the farm</h2>
@@ -138,8 +138,7 @@
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
     			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2">
-				<img src="images/Hemi - 13 of 25.png">
-	    		<img src="images/tractor.jpg" alt="Planting at the farm">  				
+				<img src="images/Hemi - 13 of 25.png">			
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
 	  		</div>
 	  	</section>
