adding row class

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		</section>
 	  	<section>
 	  		<div class="portfolio portfolio-holder">
-    			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2">
+    			<img src="images/Hector.jpg" alt="Hector Buitrago" class="column-2 row-2">
 				<img src="images/Hemi - 13 of 25.png">			
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
 	  		</div>
