taking out inline video styles

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	 	<section class="media">
 	 		<div>
 				<h2>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></h2>
-				<div style="padding:56.25% 0 0 0;position:relative;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Q1EZuXHVrJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+				<div ><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Q1EZuXHVrJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	 		</div>
 	 		<div>
 	 			<h2>More about the farm</h2>
